--- a/Crumbpins/AndroidManifest.xml
+++ b/Crumbpins/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:targetSdkVersion="19" />
 
     <permission
-            android:name="com.uq.Crumbpins.MAPS_RECEIVE"
+            android:name="com.uq.Crumbpins.permission.MAPS_RECEIVE"
             android:protectionLevel="signature" >
     </permission>
 
@@ -45,7 +45,7 @@
                 android:value="AIzaSyDmexjuCpUGnn32suZ4bNhoPCtSRaj5Dms" />
 
         <meta-data android:name="com.google.android.gms.version"
-                   android:value="5089000" />
+                   android:value="@integer/google_play_services_version" />
 
         <activity
                 android:name=".LoginActivity"
