--- a/message/app/src/main/AndroidManifest.xml
+++ b/message/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:protectionLevel="signature" >
     </permission>
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-permission android:name="com.uq.message.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -69,6 +71,7 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo" />
+
         <activity
             android:name="com.uq.message.PostActivity"
             android:label="@string/activity_post_title"
@@ -76,6 +79,7 @@
         <activity
             android:name="com.uq.message.SettingsActivity"
             android:label="@string/title_activity_settings" />
+
     </application>
 
 </manifest>
